Fixed z-indexing on header

--- a/components/cart/CartItem.module.scss
+++ b/components/cart/CartItem.module.scss
@@ -6,6 +6,7 @@
 
   .thumbnail {
     position: relative;
+    z-index: 1;
 
     img {
       width: 85%;
