--- a/components/layout/Header.module.scss
+++ b/components/layout/Header.module.scss
@@ -7,6 +7,7 @@
   top: 0;
   width: 100%;
   background-color: white;
+  z-index: 5;
 
   .modal {
     @media (min-width: 1100px) {
